<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/rank"
        android:title="@string/title_ranking" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/market"
        android:title="@string/title_market" />

    <item
        android:id="@+id/navigation_comunity"
        android:icon="@drawable/comunity"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/my"
        android:title="@string/title_user" />
</menu>