<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.qplus.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="com.example.qplus.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.example.qplus.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.qplus.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>